styles/Home.module.css
.center {
  text-align: center;
  background-color: black;
  color: white;
}

.navbar {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  font-size: medium;
  padding-left: 0px;
}

.navbarInstance {
  background-color: rgb(127, 0, 0);
  border-radius: 5px;
  font-size: larger;
  padding: 3px;
  margin: 4px;
}

.buttonContainer {
  display: flex;
  justify-content: space-around;
  padding: 10px;
}

.buttons {
  height: 50px;
  width: 100px;
  background-color: lightcoral;

}

.buttons:hover {
  background-color: black;
}

.leftAlign {
  text-align: left;
  padding-left: 50px;
}

.image {
  object-fit: contain;
  width: 250px;
  height: 100%;
}

.image2 {
  object-fit: contain;
  width: 100%;
  height: 230px;
}

.image3 {
  width: 300px;
}

.video {
  width: 100%;
}

.flex {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.flexColumn {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  flex-direction: column;
}

.flexNoWrap {
  display: flex;
  justify-content: space-around;
}

.tallyCorrect {
  color: greenyellow;
  font-size: 50px;
}

.tallyIncorrect {
  color: red;
  font-size: 50px;
}

.divWidth {
  padding-left: 20px;
  padding-right: 40px;
}

.underlineBold {
  text-decoration: underline;
  font-weight: bold;
  color: rgb(171, 171, 255);
}

.blueSolution {
  color: rgb(171, 171, 255);
}

.blue {
  color: rgb(171, 171, 255);
}

.color2 {
  color: rgb(182, 255, 255);
}

.color3 {
  color: rgb(254, 236, 186);
}

